--- a/package.json
+++ b/package.json
@@ -27,13 +27,22 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "lucide-react": "^0.546.0",
+  "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-aria-components": "^1.3.0",
     "react-chartjs-2": "^5.3.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-day-picker": "^9.5.2",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "react-hook-form": "^7.53.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.24.1",
+  "@hookform/resolvers": "^3.9.0",
+  "@internationalized/date": "^3.5.1",
+  "@radix-ui/react-scroll-area": "^1.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
